<resources>
    <string name="app_name">Lugmety Driver</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="current">Current</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="no_route">No Route</string>
    <string name="no_route_to_restaurant">There is no route to restaurant.</string>
    <string name="freelance_driver">Freelance Driver</string>
    <string name="sponsored_driver">Sponsored Driver</string>
    <string name="show_orders">Show Orders</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="tnc">Terms and Condition</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="user_inactive">User Inactive</string>
    <string name="as_freelancer">as Freelancer</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="customer_delivery">Customer Delivery</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="id_no">Id Number</string>
    <string name="upload_id">Upload ID</string>
    <string name="order">Order</string>
    <string name="add_q">Add ?</string>
    <string name="order_history">Order History</string>
    <string name="points_collected">Points Collected</string>
    <string name="my_details">My Details</string>
    <string name="home">Home</string>
    <string name="sync">Sync</string>
    <string name="sync_failed">Sync failed</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="restaurent">Restaurant</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="order_received_from_resturant">Order Received from Restaurant</string>
    <string name="trip_details">Trip Details</string>
    <string name="new_orders">NEW ORDERS</string>
    <string name="assigned_orders">ASSIGNED ORDERS </string>
    <string name="delivered_orders">DELIVERED ORDERS</string>
    <string name="pending_orders">PENDING ORDERS</string>
    <string name="reverse_orders">UNDELIVERED ORDERS</string>
    <string name="order_no">Order Number</string>
    <string name="customer_map">Customer Map</string>
    <string name="order_pickup">Order Pickup</string>
    <string name="order_deliver">Order Deliver</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="trip_earning">Earning</string>
    <string name="trip_history">Trip History</string>
    <string name="from_date">From Data:</string>
    <string name="to_date">To Date:</string>
    <string name="get_history">Get History</string>
    <string name="points">Points</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="status">Status</string>
    <string name="title_activity_restaurant_map">Restaurant Map</string>
    <string name="full_route">Full Route</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="pick">Confirm Pickup</string>
    <string name="pick_order">Pick Order</string>
    <string name="customer">Customer</string>
    <string name="orders_assigned">Orders Assigned</string>
    <string name="contact_owner">Please Contact Restaurant Owner.</string>
    <string name="orders_pending">Orders Pending</string>
    <string name="map">Map</string>
    <string name="orders_delivered">Orders Delivered</string>
    <string name="orders_delivered_success">Orders Delivered Successfully.</string>
    <string name="save">Save</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="loading">Loading</string>
    <string name="wait">Wait</string>
    <string name="reject">Reject</string>
    <string name="orders_reversed">Orders Reversed</string>
    <string name="drivers_app">Driver\'s App</string>
    <string name="get_details">Get Details</string>
    <string name="freelance_dashboard">Freelance Dashboard</string>
    <string name="order_detail">Order Detail</string>
    <string name="freelance_history">Freelance History</string>
    <string name="sponsored_history">Sponsored History</string>
    <string name="order_list">Order List</string>
    <string name="restaurant">Restaurant</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="unable_to_find_route">Unable to find route</string>
    <string name="routing_cancelled">Routing Cancelled</string>
    <string name="show_map_q">Show Map ?</string>
    <string name="routing_failed">Routing Failed</string>
    <string name="fetching_location">Fetching Location</string>
    <string name="fetching_route">Fetching Route</string>
    <string name="unknown_response_status">Unknown Response Status</string>
    <string name="unauthorized_request">Unauthorized Request</string>
    <string name="changing_language">Changing Language</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="connecting">Connecting...</string>
    <string name="respond_for_order">Please respond to this order delivery.</string>
    <string name="empty_list">Empty List</string>
    <string name="failed">Failed</string>
    <string name="prompt">Prompt</string>
    <string name="error">Error</string>
    <string name="order_is_already_pending_for_you">An order is already pending for you.</string>
    <string name="order_is_already_for_delivery">Please deliver the current parcel to customer first.</string>
    <string name="no_pending_orders">No Pending Order. Check it.</string>
    <string name="order_rejected">Order Rejected</string>
    <string name="show">Show</string>
    <string name="alert">Alert</string>
    <string name="user_not_exist">User Not Exist</string>
    <string name="image_decode_exception">Image Decoding Exception</string>
    <string name="no_rest_fnd">No Restaurant Found</string>
    <string name="reverse">Undelivered</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_on_p">Delivered on: </string>
    <string name="see_on_map_q">See on map ?</string>
    <string name="order_updated">Order Updated</string>
    <string name="sync_in_progress">Sync in progress...</string>
    <string name="nothing_to_sync">Nothing to sync.</string>
    <string name="accept_q">Accept ?</string>
    <string name="update_the_new_order_status">Update the new order status</string>
    <string name="respond">Respond</string>
    <string name="show_on_map_q">Show on map ?</string>
    <string name="image_attached">Image Attached</string>
    <string name="sync_process_completed_successfully">Sync process completed successfully</string>
    <string name="no_order_to_reject">No order to reject.</string>
    <string name="this_order_is_delivered">This order is delivered</string>
    <string name="this_order_is_reveresed">This order is not delivered</string>
    <string name="response">Response</string>
    <string name="unable_toaccept_order">Unable to accept order.</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="no_assigned_order">No assigned order.</string>
    <string name="alphabets_and_nubers_allowed_only">Alphabets and numbers allowed only</string>
    <string name="bad_request">Bad request</string>
    <string name="total_orders_restored">Total pending orders restored </string>
    <string name="enter_valid_data">Enter valid data</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="only_numbers_allowed">Only numbers allowed</string>
    <string name="confirm_password_not_matching">Confirm Password Not Matching</string>
    <string name="id_proof_image_required">ID proof image required</string>
    <string name="title_activity_restaurant_list_map">Map</string>
    <string name="title_activity_freelance_order_history_detail">FreelanceOrderHistoryDetail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_freelance_nav2_restaurant">Map</string>
    <string name="title_activity_freelance_nav2_customer">Map</string>
    <string name="title_activity_show_coordinate_map">Map</string>
    <string name="empty_order_list">Empty Order List.</string>
    <string name="no_orders_found">No orders found.</string>
    <string name="already_login_as_freelance_driver">Already login as freelance driver</string>
    <string name="already_login_as_sponsored_driver">Already login as sponsored driver</string>
    <string name="parcel_delivered_q">Parcel Delivered ?</string>
    <string name="unable_to_fetch_image">Unable to fetch image</string>
    <string name="are_you_sure_q">Are you sure ?</string>
    <string name="pickup_time">Pickup Time:</string>
    <string name="already_assigned">Already assigned. Pick another order.</string>
    <string name="order_successfully_assigned_to_you">This order is assigned to you successfully.</string>
    <string name="image_file_kb">Image file should not exceed 1MB</string>
    <string name="order_picked_from_restaurant">Order picker from restaurant.</string>
    <string name="pick_from_date">Pick, from data</string>
    <string name="pick_to_date">Pick, to date</string>
    <string name="contact_admin">Also, contact Restaurant Owner for this order</string>
    <string name="minimum_ten">11 digit number</string>


</resources>
