<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark_grad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/textView5"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:ems="10"
            android:background="@drawable/shape_rect_outline"
            android:id="@+id/et_oldpasswd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/new_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorAccent"
            android:ems="10"
            android:id="@+id/et_newpasswd"
            android:background="@drawable/shape_rect_outline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/confirm_password"
            android:id="@+id/textView7"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:background="@drawable/shape_rect_outline"
            android:id="@+id/et_cfmpasswd" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="70dp"
            android:id="@+id/btn_save"
            android:textColor="@android:color/white"
            android:background="@drawable/gradient_strip" />

    </LinearLayout>

</ScrollView>
