<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark_grad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/trip_history"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/from_date"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/from_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_rect_outline"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/to_date"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/to_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_rect_outline"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/gradient_strip"
            android:text="@string/get_history"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
