<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark_grad"
    tools:context=".activity.freelance.FreelanceRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/confirm_password"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_cnf_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/gender"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/sp_gender"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:spinnerMode="dropdown"
            android:textColor="#cccccc" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/mobile_number"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:weightSum="15">

            <!--<EditText
                android:id="@+id/et_mobile_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="13"
                android:background="@drawable/shape_rect_outline"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent" />-->

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/shape_rect_outline"
                android:ems="10"
                android:text="0"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_dob"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/address"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scrollbars="vertical"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/id_no"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_idno"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_rect_outline"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient_strip"
            android:text="@string/upload_id"
            android:visibility="gone"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/img_icard"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="@mipmap/profileimage"
            android:visibility="gone"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient_strip"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txttnc"
            android:text="@string/tnc"/>

    </LinearLayout>

</ScrollView>
